--- a/public/style.css
+++ b/public/style.css
@@ -140,6 +140,7 @@
   align-items: center;
   padding: 0 20px;
 }
+
 .content-container1 {
   background: rgb(144, 241, 144); /* Memberikan background putih transparan pada konten */
   padding: 20px;
@@ -148,6 +149,22 @@
   max-width: 1200px; /* Memberikan batas maksimal lebar konten */
   box-sizing: border-box; /* Memastikan padding termasuk dalam lebar elemen */
 }
+
+/* Zigzag layout */
+.zigzag .col-md-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.zigzag .row:nth-child(even) .col-md-4 {
+  order: 2;
+}
+
+.zigzag .row:nth-child(even) .col-md-8 {
+  order: 1;
+}
+
 
 /* login regis css */
 body {
