--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
 .navbar-custom {
   background-color: rgb(144, 241, 144) !important;
   color: rgb(7, 7, 7) !important;
-  z-index: 1; /* Set the navbar's z-index to ensure it is behind the welcome container */
+  z-index: 1; 
 }
 
 .navbar-custom .navbar-brand,
@@ -140,7 +140,6 @@
   align-items: center;
   padding: 0 20px;
 }
-
 .content-container1 {
   background: rgb(144, 241, 144); /* Memberikan background putih transparan pada konten */
   padding: 20px;
@@ -150,19 +149,33 @@
   box-sizing: border-box; /* Memastikan padding termasuk dalam lebar elemen */
 }
 
-/* Zigzag layout */
-.zigzag .col-md-4 {
+.search-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding: 20px;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #dee2e6;
 }
 
-.zigzag .row:nth-child(even) .col-md-4 {
-  order: 2;
+.search-input {
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  margin-right: 10px;
 }
 
-.zigzag .row:nth-child(even) .col-md-8 {
-  order: 1;
+.search-button {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: black;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: green;
 }
 
 
